--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -5,18 +5,19 @@
     "target": "es2015",
     "declaration": true,
     "inlineSources": true,
-    "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true,
     "types": [],
-    "lib": ["dom", "es2018"]
+    "lib": [
+      "dom",
+      "es2018"
+    ]
   },
   "angularCompilerOptions": {
-    "annotateForClosureCompiler": true,
     "skipTemplateCodegen": true,
     "strictMetadataEmit": true,
-    "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true,
     "enableResourceInlining": true
   },
-  "exclude": ["src/test.ts", "**/*.spec.ts"]
+  "exclude": [
+    "src/test.ts",
+    "**/*.spec.ts"
+  ]
 }
