--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "peerDependencies": {
     "@angular/common": "^9.1.9",
     "@angular/core": "^9.1.9",
-    "@angular/material": "^9.2.4"
+    "@angular/material": "^9.2.4",
+    "@angular/cdk": "^9.2.4"
+  },
+  "dependencies": {
+    "tslib": "^1.10.0"
   }
 }
